@@ -1,7 +1,7 @@
 #
 # Makefile gnucobol/tests/cobol85/##MODULE##
 #
-# Copyright (C) 2003-2012, 2015-2018 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2015-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -21,6 +21,8 @@
 
 TESTS = ##TESTS##
 TESTS_LOCAL = ##TESTS_LOCAL##
+
+RM = rm -rf
 
 # targets that are only logical targets instead of files
 .PHONY: test test-local diff test-O test-O-local lib lib-local $\
@@ -72,3 +74,9 @@ $(TESTS_LOCAL): lib-local
 	@perl ##COB85DIR##/report.pl `echo $@ | sed -e 's|-.*||g'` 2>$@.log
 	@grep `echo $@ | sed -e 's|-.*||g'` ##COB85DIR##/##MODULE##.txt | diff - $@.log
 	@rm -rf $@.log
+
+clean: clean-db
+	$(RM) *.log *.out
+
+clean-db:
+	$(RM) __db.*
